fixes to the holler blocks vertical alignment issues when it contains a three-up-block with a central CTA and image grids

--- a/sass/atoms/_image-block.scss
+++ b/sass/atoms/_image-block.scss
@@ -98,7 +98,10 @@
 
   /* --- child layout --- */
   .image {
-    width: 100%;
+    width: 80%;
+    margin: 0 auto;
+    float: none;
+    display: block;
   }
 
   /* --- mobile --- */
